kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
spec:
  selector:
    matchLabels:
      app: demoapp
  revisionHistoryLimit: 3
  replicas: 1
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      containers:
        - name: demoapp
          image: ghcr.io/robalb/django_rest_apidoc:sha-c2635091851606bb2f1fc9c0c9b222e13f9432d9
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: regcred
