kubernetes/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name:  demoapp
spec:
  selector:
    app: demoapp

  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP #optional protocol
